--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
 header{
-	max-width: 1023px;
-	height: 210px;
+	max-width: none;
 	background: #961432;
     font-family: 'expressway';
     border: none;
     position: relative;
+	padding: 10px;
     margin-bottom: 0px;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h1 {
+    color: white;
+      position: relative;
+	font-family: "Arial";
 }
