--- a/style.css
+++ b/style.css
@@ -26,12 +26,30 @@ table {
     width: 100%;
 }
 
+table.columns-container{
+	display: table-cell;
+    height: 100%;
+    width:600px;
+    /*text-align: center;*/
+}
+
 td, th {
     border: 1px solid #dddddd;
-    text-align: left;
+    text-align: center;
     padding: 8px;
 }
 
+tr:hover {background-color: #f5f5f6;}
+
 tr:nth-child(even) {
     background-color: #dddddd;
+}
+
+.img-valign {
+  vertical-align: middle;
+  margin-bottom: 0.75em;
+}
+
+.text1 {
+  font-size: 16px;
 }
