--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ table.columns-container{
 	display: table-cell;
     height: 100%;
     width:600px;
-    /*text-align: center;*/
+    text-align: top;
 }
 
 td, th {
+	vertical-align: middle;
     border: 1px solid #dddddd;
     text-align: center;
     padding: 8px;
@@ -46,10 +47,15 @@ tr:nth-child(even) {
 }
 
 .img-valign {
-  vertical-align: middle;
+  display: inline;
+  margin-bottom: 0.75em;
+}
+
+.img-valign2 {
+  display: inline;
   margin-bottom: 0.75em;
 }
 
 .text1 {
-  font-size: 16px;
+  font-size: 12px;
 }
