--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ table.columns-container{
 
 td, th {
 	vertical-align: middle;
-    border: 1px solid #dddddd;
+    /*border: 1px solid #dddddd;*/
     text-align: center;
     padding: 8px;
 }
